application/brennoflavio/google-smarthome-integration/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: google-smarthome-integration
  namespace: google-smarthome-integration
  labels:
    app: google-smarthome-integration
spec:
  selector:
    app: google-smarthome-integration
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
